IGNITE-2234: Attempt to optimize GridCacheMvccManager.